--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/yaml": "5.4.*",
         "symfonycasts/reset-password-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-json": "*"
     },
     "config": {
         "allow-plugins": {
