--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,9 +35,9 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-#    access_control:
-#         - { path: ^/admin, roles: ROLE_ADMIN }
-#         - { path: ^/, roles: ROLE_USER }
+    access_control:
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/profil, roles: ROLE_USER }
 
 when@test:
     security:
