--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-uploads_user_pictures: '%kernel.project_dir%/public/uploads/user_img'
-
+ uploads_user_pictures: '%kernel.project_dir%/public/uploads/user_img'
+#    images_directory : '%kernel.project_dir%/public/uploads/user_img'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -23,7 +23,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-twig.extension.intl:
-    class: Twig_Extensions_Extension_Intl
-    tags:
-        - { name: twig.extension }
+#twig.extension.intl:
+#    class: Twig_Extensions_Extension_Intl
+#    tags:
+#        - { name: twig.extension }
